--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,4 +18,8 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet publish -c Release -r win-x64 --self-contained true -o ./
+    - uses: actions/upload-artifact@v1
+      with:
+        name: exe
+        path: ./Json2Xml.exe
